--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/gradient">
 
-    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/_20sdp">
@@ -15,28 +16,31 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_margin="@dimen/_20sdp"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:layout_marginBottom="@dimen/_20sdp"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/image_icon"
                 android:layout_width="48sp"
                 android:layout_height="48sp"
+                android:layout_centerInParent="true"
                 android:layout_gravity="center"
                 android:background="@drawable/ic_baseline_how_to_reg_24"
-                android:layout_centerInParent="true"
-                tools:ignore="DuplicateIds">
-            </ImageView>
+                tools:ignore="DuplicateIds"></ImageView>
+
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_10sdp"
-                android:text="@string/create_nyour_account"
-                android:layout_gravity="center"
                 android:gravity="center"
+                android:text="@string/create_nyour_account"
                 android:textColor="@color/colorTheme"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -49,13 +53,13 @@
                 app:hintTextColor="@color/colorWhite">
 
                 <EditText
+                    android:id="@+id/fn_tb"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:backgroundTint="@color/colorWhite"
                     android:hint="First name"
-                    android:id="@+id/fn_tb"
                     android:importantForAutofill="no"
                     android:inputType="textImeMultiLine"
                     android:paddingBottom="@dimen/_15sdp"
@@ -71,13 +75,13 @@
                 app:hintTextColor="@color/colorWhite">
 
                 <EditText
+                    android:id="@+id/ln_tb"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:backgroundTint="@color/colorWhite"
                     android:hint="Last name"
-                    android:id="@+id/ln_tb"
                     android:importantForAutofill="no"
                     android:inputType="textImeMultiLine"
                     android:paddingBottom="@dimen/_15sdp"
@@ -90,7 +94,6 @@
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
 
-                android:theme="@style/Theme.MaterialComponents"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
@@ -99,7 +102,8 @@
                 android:importantForAutofill="no"
                 android:paddingBottom="@dimen/_15sdp"
                 android:textColor="@color/colorWhite"
-                android:textColorHint="@color/colorWhite">
+                android:textColorHint="@color/colorWhite"
+                android:theme="@style/Theme.MaterialComponents">
 
                 <!-- Inside text input layout add
                       an auto complete text view
@@ -110,15 +114,13 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:inputType="textImeMultiLine"
-                    android:text="District"
-                    />
+                    android:text="District" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
 
-                android:theme="@style/Theme.MaterialComponents"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
@@ -127,7 +129,8 @@
                 android:importantForAutofill="no"
                 android:paddingBottom="@dimen/_15sdp"
                 android:textColor="@color/colorWhite"
-                android:textColorHint="@color/colorWhite">
+                android:textColorHint="@color/colorWhite"
+                android:theme="@style/Theme.MaterialComponents">
 
                 <!-- Inside text input layout add
                       an auto complete text view
@@ -138,14 +141,13 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:inputType="textImeMultiLine"
-                    android:text="Zone"
-                    />
+                    android:text="Zone" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
 
-                android:theme="@style/Theme.MaterialComponents"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
@@ -154,7 +156,8 @@
                 android:importantForAutofill="no"
                 android:paddingBottom="@dimen/_15sdp"
                 android:textColor="@color/colorWhite"
-                android:textColorHint="@color/colorWhite">
+                android:textColorHint="@color/colorWhite"
+                android:theme="@style/Theme.MaterialComponents">
 
                 <!-- Inside text input layout add
                       an auto complete text view
@@ -165,27 +168,27 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:inputType="textImeMultiLine"
-                    android:text="School"
-                    />
+                    android:text="School" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/otherEditTextSchool"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorWhite"
                 android:textColorHint="@color/colorWhite"
-                app:hintTextColor="@color/colorWhite"
-                android:id="@+id/otherEditTextSchool"
-                android:visibility="gone">
+                android:visibility="gone"
+                app:hintTextColor="@color/colorWhite">
 
                 <EditText
+                    android:id="@+id/otherEditTextBoxSchool"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:backgroundTint="@color/colorWhite"
                     android:hint="Type other school name here"
-                    android:id="@+id/otherEditTextBoxSchool"
                     android:importantForAutofill="no"
                     android:inputType="textImeMultiLine"
                     android:paddingBottom="@dimen/_15sdp"
@@ -193,20 +196,21 @@
                     android:textColorHint="@color/colorWhite" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
 
-                android:theme="@style/Theme.MaterialComponents"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/classdropdown"
+
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:id="@+id/classdropdown"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:backgroundTint="@color/colorWhite"
                 android:importantForAutofill="no"
                 android:paddingBottom="@dimen/_15sdp"
                 android:textColor="@color/colorWhite"
-                android:textColorHint="@color/colorWhite">
+                android:textColorHint="@color/colorWhite"
+                android:theme="@style/Theme.MaterialComponents">
 
                 <!-- Inside text input layout add
                       an auto complete text view
@@ -217,10 +221,10 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:inputType="textImeMultiLine"
-                    android:text="@string/standard"
-                    />
+                    android:text="@string/standard" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -232,22 +236,20 @@
                       an auto complete text view
                         and make its input type to none-->
                 <EditText
+                    android:id="@+id/section_tb"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:backgroundTint="@color/colorWhite"
                     android:hint="@string/section"
-                    android:id="@+id/section_tb"
                     android:importantForAutofill="no"
                     android:inputType="textImeMultiLine"
                     android:paddingBottom="@dimen/_15sdp"
                     android:textColor="@color/colorWhite"
-                    android:textColorHint="@color/colorWhite"
-                    />
+                    android:textColorHint="@color/colorWhite" />
 
             </com.google.android.material.textfield.TextInputLayout>
-
 
 
             <com.google.android.material.textfield.TextInputLayout
@@ -258,13 +260,13 @@
                 app:hintTextColor="@color/colorWhite">
 
                 <EditText
+                    android:id="@+id/email_tb"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:backgroundTint="@color/colorWhite"
                     android:hint="@string/username"
-                    android:id="@+id/email_tb"
                     android:importantForAutofill="no"
                     android:inputType="textEmailAddress"
                     android:paddingBottom="@dimen/_15sdp"
@@ -280,13 +282,13 @@
                 app:hintTextColor="@color/colorWhite">
 
                 <EditText
+                    android:id="@+id/phone_tb"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:backgroundTint="@color/colorWhite"
                     android:hint="@string/phone_number"
-                    android:id="@+id/phone_tb"
                     android:importantForAutofill="no"
                     android:inputType="phone"
                     android:paddingBottom="@dimen/_20sdp"
@@ -303,13 +305,13 @@
                 app:hintTextColor="@color/colorWhite">
 
                 <EditText
+                    android:id="@+id/username_tb"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:backgroundTint="@color/colorWhite"
                     android:hint="@string/username_created"
-                    android:id="@+id/username_tb"
                     android:importantForAutofill="no"
                     android:inputType="textImeMultiLine"
                     android:paddingBottom="@dimen/_20sdp"
@@ -321,25 +323,95 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorWhite"
-                app:passwordToggleEnabled="true"
-                app:passwordToggleTint="@color/colorWhite"
                 android:textColorHint="@color/colorWhite"
-                app:hintTextColor="@color/colorWhite">
+                app:hintTextColor="@color/colorWhite"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/colorWhite">
 
                 <EditText
+                    android:id="@+id/password_tb"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:backgroundTint="@color/colorWhite"
                     android:hint="@string/password"
-                    android:id="@+id/password_tb"
                     android:importantForAutofill="no"
                     android:inputType="textPassword"
                     android:paddingBottom="@dimen/_20sdp"
                     android:textColor="@color/colorWhite"
                     android:textColorHint="@color/colorWhite" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:text="Click on the button to turn on gps \n or to get a an accurate location "></TextView>
+            <ImageView
+                android:id="@+id/image_icon_gps"
+                android:layout_width="48sp"
+                android:layout_height="48sp"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_baseline_gps_off_24"
+                tools:ignore="DuplicateIds"></ImageView>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorWhite"
+                android:textColorHint="@color/colorWhite"
+                app:hintTextColor="@color/colorWhite">
+
+                <EditText
+                    android:id="@+id/lat_tb"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"
+                    android:backgroundTint="@color/colorWhite"
+                    android:hint="Latitude"
+                    android:editable="false"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:importantForAutofill="no"
+                    android:inputType="textImeMultiLine"
+                    android:paddingBottom="@dimen/_20sdp"
+                    android:textColor="@color/colorWhite"
+                    android:textColorHint="@color/colorWhite"
+                    tools:ignore="Deprecated" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorWhite"
+                android:textColorHint="@color/colorWhite"
+                app:hintTextColor="@color/colorWhite">
+
+                <EditText
+                    android:id="@+id/lng_tb"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:editable="false"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"
+                    android:backgroundTint="@color/colorWhite"
+                    android:hint="Longitude"
+                    android:importantForAutofill="no"
+                    android:inputType="textImeMultiLine"
+                    android:paddingBottom="@dimen/_20sdp"
+                    android:textColor="@color/colorWhite"
+                    android:textColorHint="@color/colorWhite"
+                    tools:ignore="Deprecated" />
+            </com.google.android.material.textfield.TextInputLayout>
+
 
             <CheckBox
                 android:layout_width="wrap_content"
@@ -365,8 +437,8 @@
                 android:id="@+id/tvSignUpText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_8sdp"
                 android:layout_gravity="center"
+                android:layout_margin="@dimen/_8sdp"
                 android:text="@string/already_have_an_account"
                 android:textColor="@color/colorWhite" />
 
